src/objects/Store_di_riferimento__c.object
<CustomObject>
    <description>Oggetto temporaneo per poter, da parte del customer care, indicare lo store di riferimento all&apos;interno del caso</description>
    <fields>
        <fullName>Codice_Store__c</fullName>
        <label>Codice Store</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Tipologia__c</fullName>
        <label>Codice Tipologia</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <label>Tipologia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Store di Riferimento</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores di Riferimento</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>